[package]
author = ["Pietro Zanotta", "<pcs.parmigiano@gmail.com>"]
description = "Numerical methods for ODE"
repository = "https://github.com/ScipioneParmigiano/damn-differential"
name = "damndiff"
version = "0.1.4"
edition = "2021"
license = "MIT" 
keywords = ["ode", "numerical-methods", "scientific-computing"]
readme = "README.md"
